--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,6 +8,7 @@
     <link href="/stylesheets/style.min.css" rel="stylesheet">
 
     <link rel="stylesheet" href="/components/angular-google-places-autocomplete/src/autocomplete.css">
+    <link rel="stylesheet" href="/components/angular-ui-bootstrap-datetimepicker/datetimepicker.css">
 
     <script src="/components/jquery/dist/jquery.min.js"></script>
     <script src="/components/angular/angular.min.js"></script>
@@ -15,6 +16,7 @@
     <script src="/components/angular-ui-router/release/angular-ui-router.min.js"></script>
     <script src="/components/angular-bootstrap/ui-bootstrap.min.js"></script>
     <script src="/components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
+    <script src="/components/angular-ui-bootstrap-datetimepicker/datetimepicker.js"></script>
 
     <script src="https://maps.googleapis.com/maps/api/js?libraries=places"></script>
     <script src="/components/angular-google-places-autocomplete/src/autocomplete.js"></script>
