--- a/public/templates/viajes/list.html
+++ b/public/templates/viajes/list.html
@@ -18,14 +18,12 @@
 
 <div class="row-striped">
 
-    <div class="row" ng-repeat="viaje in viajes | orderBy:(translados | orderBy:desde.fechaDeArribo)[0]">
+    <div class="row" ng-repeat="viaje in viajes">
         <div class="col-md-8 pointer" vp-open
              tooltip-html-unsafe="
                 {{viaje.nombre}}
                  <br>
-                Fecha de arribo: {{(viaje.translados | orderBy:desde.fechaDeArribo)[0].desde.fechaDeArribo | date:'dd.MM.yyyy'}}
-                 <br>
-                Fecha de partida: {{(viaje.translados | orderBy:desde.fechaDePartida)[viaje.translados.length - 1].hasta.fechaDePartida | date:'dd.MM.yyyy'}}"
+                 "
              ui-sref="viajes.detalles({ id: viaje._id })">
             <span>{{viaje.nombre}}</span>
         </div>
