--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,22 +6,9 @@
 
     <title>Vacaciones Permanentes</title>
     <link href="/stylesheets/style.min.css" rel="stylesheet">
-
-    <script src="/components/jquery/dist/jquery.min.js"></script>
-    <script src="/components/angular/angular.min.js"></script>
-    <script src="/components/angular-i18n/angular-locale_es.js" type="text/javascript"></script>
-    <script src="/components/angular-ui-router/release/angular-ui-router.min.js"></script>
-    <script src="/components/angular-bootstrap/ui-bootstrap.min.js"></script>
-    <script src="/components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
-
-    <script src="/javascripts/config-run.js"></script>
-    <script src="/javascripts/controllers.js"></script>
-    <script src="/javascripts/directives.js"></script>
-    <script src="/javascripts/factories.js"></script>
-    <script src="/javascripts/angularApp.js"></script>
-
-    <style>
-    </style>
+    <!-- bower:js-->
+    <!-- endbower-->
+    
 </head>
 <body ng-app="vacacionesPermanentes">
 
