--- a/public/templates/viajes/form.html
+++ b/public/templates/viajes/form.html
@@ -3,7 +3,7 @@
         <div class="form-group input-group-sm">
             <label for="nombre">Nombre</label>
             <input type="text" class="form-control" autofocus="true" id="nombre" name="nombre"
-                   ng-model="viaje.nombre" required ng-minlength=3>
+                   ng-model="viaje.nombre" ng-required ng-minlength=3>
         </div>
         <span class="error" ng-show="formElement.nombre.$dirty && formElement.nombre.$invalid">
             <span ng-show="formElement.nombre.$error.required">
@@ -16,147 +16,176 @@
     </div>
 </div>
 
-<div ng-repeat="destino in viaje.destinos | orderBy:fechaDeArribo">
+<div ng-controller="DestinoCtrl">
+    <div ng-repeat="destino in viaje.destinos | orderBy:fechaDeArribo">
 
-    <hr>
+        <hr>
 
-    <div class="row" ng-controller="DestinoCtrl">
-        <div class="col-md-12">
-            <div class="form-group input-group-sm">
-                <label for="ciudad">Ciudad</label>
-                <input type="text" class="form-control" autofocus="true" id="ciudad" name="ciudad"
-                       g-places-autocomplete force-selection="true"
-                       ng-model="destino.ciudad" required ng-minlength=3>
+        <div class="row">
+            <div class="col-md-3 col-md-offset-9">
+                <a class="btn btn-danger" ng-click="modalEliminarDestino($index)">
+                    <span class="glyphicon glyphicon-minus"></span>
+                    Eliminar Destino
+                </a>
             </div>
-            <span class="error" ng-show="formElement.ciudad.$dirty && formElement.ciudad.$invalid">
-                <span ng-show="formElement.ciudad.$error.required">
-                    Campo requerido
-                </span>
-                <span ng-show="formElement.ciudad.$error.minlength">
-                    Muy corto
-                </span>
-            </span>
         </div>
+
+        <div class="row">
+            <div class="col-md-12">
+                <div class="form-group input-group-sm">
+                    <label for="ciudad">Ciudad</label>
+                    <input type="text" class="form-control" autofocus="true" id="ciudad" name="ciudad"
+                           g-places-autocomplete force-selection="true"
+                           ng-model="destino.ciudad" ng-required ng-minlength=3>
+                </div>
+                <span class="error" ng-show="formElement.ciudad.$dirty && formElement.ciudad.$invalid">
+                    <span ng-show="formElement.ciudad.$error.required">
+                        Campo requerido
+                    </span>
+                    <span ng-show="formElement.ciudad.$error.minlength">
+                        Muy corto
+                    </span>
+                </span>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-md-6">
+                <div class="form-group input-group-sm">
+                    <label for="transporte_tipo">Medio de llegada</label>
+                    <input type="text" class="form-control" autofocus="true" id="transporte_tipo" name="transporte_tipo"
+                           ng-model="destino.formaDeLlegada.tipo" ng-required ng-minlength=3>
+                </div>
+                <span class="error" ng-show="formElement.transporte_tipo.$dirty && formElement.transporte_tipo.$invalid">
+                    <span ng-show="formElement.transporte_tipo.$error.required">
+                        Campo requerido
+                    </span>
+                    <span ng-show="formElement.transporte_tipo.$error.minlength">
+                        Muy corto
+                    </span>
+                </span>
+            </div>
+            <div class="col-md-6">
+                <div class="form-group input-group-sm">
+                    <label for="transporte_descripcion">Descipción</label>
+                    <input type="text" class="form-control" autofocus="true" id="transporte_descripcion" name="transporte_descripcion"
+                           ng-model="destino.formaDeLlegada.descripcion">
+                </div>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-md-6">
+                <div class="form-group input-group-sm">
+                    <label for="fechaDeArribo">Fecha de arribo</label>
+                    <input type="text" class="form-control" autofocus="true" id="fechaDeArribo" name="fechaDeArribo"
+                           datepicker-popup="dd.MM.yyyy" show-button-bar="false" datepicker-options="{showWeeks:false}"
+                           datepicker-append-to-body="true" is-open="opened1[$index]" ng-click="opened1[$index] = true"
+                           placeholder="dd.mm.yyyy" ng-model="destino.fechaDeArribo" ng-required>
+                </div>
+                <span class="error" ng-show="formElement.fechaDeArribo.$dirty && formElement.fechaDeArribo.$invalid">
+                    <span ng-show="formElement.fechaDeArribo.$error.required">
+                        Campo requerido
+                    </span>
+                </span>
+            </div>
+            <div class="col-md-6">
+                <div class="form-group input-group-sm">
+                    <label for="fechaDePartida">Fecha de partida</label>
+                    <input type="text" class="form-control" autofocus="true" id="fechaDePartida" name="fechaDePartida"
+                           datepicker-popup="dd.MM.yyyy" show-button-bar="false" datepicker-options="{showWeeks:false}"
+                           datepicker-append-to-body="true" is-open="opened2[$index]" ng-click="opened2[$index] = true"
+                           placeholder="dd.mm.yyyy" ng-model="destino.fechaDePartida" ng-required>
+                </div>
+                <span class="error" ng-show="formElement.fechaDePartida.$dirty && formElement.fechaDePartida.$invalid">
+                    <span ng-show="formElement.fechaDePartida.$error.required">
+                        Campo requerido
+                    </span>
+                </span>
+            </div>
+        </div>
+
+        <div class="row" ng-controller="HospedajeCtrl">
+            <div class="col-md-12">
+                <div class="form-group input-group-sm">
+                    <label for="hospedaje_nombre">Hospedaje</label>
+                    <input type="text" class="form-control" autofocus="true" id="hospedaje_nombre" name="hospedaje_nombre"
+                           g-places-autocomplete force-selection="true"
+                           ng-model="destino.hospedaje.nombre" ng-required ng-minlength=3>
+                </div>
+                <span class="error" ng-show="formElement.hospedaje_nombre.$dirty && formElement.hospedaje_nombre.$invalid">
+                    <span ng-show="formElement.hospedaje_nombre.$error.required">
+                        Campo requerido
+                    </span>
+                    <span ng-show="formElement.hospedaje_nombre.$error.minlength">
+                        Muy corto
+                    </span>
+                </span>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-md-6">
+                <div class="form-group input-group-sm">
+                    <label for="checkIn">Check In</label>
+                    <br>
+                    <datetimepicker min-date="minDate" id="checkIn" name="checkIn"
+                                    ng-model="destino.hospedaje.checkIn" date-format="dd.MM.yyyy"
+                                    date-options="{startingDay: 1, showWeeks:false}"
+                                    show-meridian="false" placeholder="dd.mm.yyyy" ng-required>
+                    </datetimepicker>
+
+                    <!--<input type="text" class="form-control" autofocus="true" id="checkIn" name="checkIn"-->
+                           <!--datepicker-popup="dd.MM.yyyy" show-button-bar="false" datepicker-options="{showWeeks:false}"-->
+                           <!--datepicker-append-to-body="true" is-open="opened3[$index]" ng-click="opened3[$index] = true"-->
+                           <!--placeholder="dd.mm.yyyy" ng-model="destino.hospedaje.checkIn" ng-required>-->
+                </div>
+                <span class="error" ng-show="formElement.checkIn.$dirty && formElement.checkIn.$invalid">
+                    <span ng-show="formElement.checkIn.$error.required">
+                        Campo requerido
+                    </span>
+                </span>
+            </div>
+            <div class="col-md-6">
+                <div class="form-group input-group-sm">
+                    <label for="checkOut">Check Out</label>
+                    <br>
+                    <datetimepicker min-date="minDate" id="checkOut" name="checkOut"
+                                    ng-model="destino.hospedaje.checkOut" date-format="dd.MM.yyyy"
+                                    date-options="{startingDay: 1, showWeeks: false}"
+                                    show-meridian="false" placeholder="dd.mm.yyyy" ng-required>
+                    </datetimepicker>
+
+                    <!--<input type="text" class="form-control" id="checkOut" name="checkOut"-->
+                           <!--datepicker-popup="dd.MM.yyyy" show-button-bar="false" datepicker-options="{showWeeks:false}"-->
+                           <!--datepicker-append-to-body="true" is-open="opened4[$index]" ng-click="opened4[$index] = true"-->
+                           <!--placeholder="dd.mm.yyyy" ng-model="destino.hospedaje.checkOut" ng-required>-->
+                </div>
+                <span class="error" ng-show="formElement.checkOut.$dirty && formElement.checkOut.$invalid">
+                    <span ng-show="formElement.checkOut.$error.required">
+                        Campo requerido
+                    </span>
+                </span>
+            </div>
+        </div>
+
     </div>
 
-    <div class="row">
-        <div class="col-md-6">
-            <div class="form-group input-group-sm">
-                <label for="transporte_tipo">Medio de llegada</label>
-                <input type="text" class="form-control" autofocus="true" id="transporte_tipo" name="transporte_tipo"
-                       ng-model="destino.formaDeLlegada.tipo" required ng-minlength=3>
-            </div>
-            <span class="error" ng-show="formElement.transporte_tipo.$dirty && formElement.transporte_tipo.$invalid">
-                <span ng-show="formElement.transporte_tipo.$error.required">
-                    Campo requerido
-                </span>
-                <span ng-show="formElement.transporte_tipo.$error.minlength">
-                    Muy corto
-                </span>
-            </span>
-        </div>
-        <div class="col-md-6">
-            <div class="form-group input-group-sm">
-                <label for="transporte_descripcion">Descipción</label>
-                <input type="text" class="form-control" autofocus="true" id="transporte_descripcion" name="transporte_descripcion"
-                       ng-model="destino.formaDeLlegada.descripcion">
-            </div>
-        </div>
-    </div>
+    <div>
 
-    <div class="row">
-        <div class="col-md-6">
-            <div class="form-group input-group-sm">
-                <label for="fechaDeArribo">Fecha de arribo</label>
-                <input type="text" class="form-control" autofocus="true" id="fechaDeArribo" name="fechaDeArribo"
-                       datepicker-popup="dd.MM.yyyy" show-button-bar="false" datepicker-options="{showWeeks:false}"
-                       datepicker-append-to-body="true" is-open="opened1[$index]" ng-click="opened1[$index] = true"
-                       placeholder="dd.mm.yyyy" ng-model="destino.fechaDeArribo" required>
-            </div>
-            <span class="error" ng-show="formElement.fechaDeArribo.$dirty && formElement.fechaDeArribo.$invalid">
-                <span ng-show="formElement.fechaDeArribo.$error.required">
-                    Campo requerido
-                </span>
-            </span>
-        </div>
-        <div class="col-md-6">
-            <div class="form-group input-group-sm">
-                <label for="fechaDePartida">Fecha de partida</label>
-                <input type="text" class="form-control" autofocus="true" id="fechaDePartida" name="fechaDePartida"
-                       datepicker-popup="dd.MM.yyyy" show-button-bar="false" datepicker-options="{showWeeks:false}"
-                       datepicker-append-to-body="true" is-open="opened2[$index]" ng-click="opened2[$index] = true"
-                       placeholder="dd.mm.yyyy" ng-model="destino.fechaDePartida" required>
-            </div>
-            <span class="error" ng-show="formElement.fechaDePartida.$dirty && formElement.fechaDePartida.$invalid">
-                <span ng-show="formElement.fechaDePartida.$error.required">
-                    Campo requerido
-                </span>
-            </span>
-        </div>
-    </div>
+        <hr>
 
-    <div class="row" ng-controller="HospedajeCtrl">
-        <div class="col-md-12">
-            <div class="form-group input-group-sm">
-                <label for="hospedaje_nombre">Hospedaje</label>
-                <input type="text" class="form-control" autofocus="true" id="hospedaje_nombre" name="hospedaje_nombre"
-                       g-places-autocomplete force-selection="true"
-                       ng-model="destino.hospedaje.nombre" required ng-minlength=3>
+        <div class="row">
+            <div class="col-md-12">
+                <a class="btn btn-success" ng-click="agregarDestino()">
+                    <span class="glyphicon glyphicon-plus"></span>
+                    Agregar Destino
+                </a>
             </div>
-            <span class="error" ng-show="formElement.hospedaje_nombre.$dirty && formElement.hospedaje_nombre.$invalid">
-                <span ng-show="formElement.hospedaje_nombre.$error.required">
-                    Campo requerido
-                </span>
-                <span ng-show="formElement.hospedaje_nombre.$error.minlength">
-                    Muy corto
-                </span>
-            </span>
         </div>
-    </div>
 
-    <div class="row">
-        <div class="col-md-6">
-            <div class="form-group input-group-sm">
-                <label for="checkIn">Check In</label>
-                <br>
-                <datetimepicker min-date="minDate" id="checkIn" name="checkIn"
-                                ng-model="destino.hospedaje.checkIn" date-format="dd.MM.yyyy"
-                                date-options="{startingDay: 1, showWeeks:false}"
-                                show-meridian="false" placeholder="dd.mm.yyyy" required>
-                </datetimepicker>
+        <hr>
 
-                <!--<input type="text" class="form-control" autofocus="true" id="checkIn" name="checkIn"-->
-                       <!--datepicker-popup="dd.MM.yyyy" show-button-bar="false" datepicker-options="{showWeeks:false}"-->
-                       <!--datepicker-append-to-body="true" is-open="opened3[$index]" ng-click="opened3[$index] = true"-->
-                       <!--placeholder="dd.mm.yyyy" ng-model="destino.hospedaje.checkIn" required>-->
-            </div>
-            <span class="error" ng-show="formElement.checkIn.$dirty && formElement.checkIn.$invalid">
-                <span ng-show="formElement.checkIn.$error.required">
-                    Campo requerido
-                </span>
-            </span>
-        </div>
-        <div class="col-md-6">
-            <div class="form-group input-group-sm">
-                <label for="checkOut">Check Out</label>
-                <br>
-                <datetimepicker min-date="minDate" id="checkOut" name="checkOut"
-                                ng-model="destino.hospedaje.checkOut" date-format="dd.MM.yyyy"
-                                date-options="{startingDay: 1, showWeeks: false}"
-                                show-meridian="false" placeholder="dd.mm.yyyy" required>
-                </datetimepicker>
-
-                <!--<input type="text" class="form-control" id="checkOut" name="checkOut"-->
-                       <!--datepicker-popup="dd.MM.yyyy" show-button-bar="false" datepicker-options="{showWeeks:false}"-->
-                       <!--datepicker-append-to-body="true" is-open="opened4[$index]" ng-click="opened4[$index] = true"-->
-                       <!--placeholder="dd.mm.yyyy" ng-model="destino.hospedaje.checkOut" required>-->
-            </div>
-            <span class="error" ng-show="formElement.checkOut.$dirty && formElement.checkOut.$invalid">
-                <span ng-show="formElement.checkOut.$error.required">
-                    Campo requerido
-                </span>
-            </span>
-        </div>
     </div>
 
 </div>
