--- a/public/templates/viajes/list.html
+++ b/public/templates/viajes/list.html
@@ -34,7 +34,7 @@
         </div>
         <div class="col-md-2">
             <button class="btn btn-danger btn-xs"
-                    ng-click="open(viaje._id)">
+                    ng-click="modalEliminarViaje(viaje._id)">
                 Eliminar
             </button>
         </div>
