--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,34 +1,35 @@
 <!DOCTYPE html>
 <html>
-<head>
 <head lang="es">
     <meta charset="UTF-8">
 
     <title>Vacaciones Permanentes</title>
+
+    <!-- bower:css-->
+    <link rel="stylesheet" href="/bower_components/angular-ui-bootstrap-datetimepicker/datetimepicker.css" />
+    <link rel="stylesheet" href="/bower_components/angular-google-places-autocomplete/src/autocomplete.css" />
+    <!-- endbower-->
+
     <link href="/stylesheets/style.min.css" rel="stylesheet">
 
-    <link rel="stylesheet" href="/components/angular-google-places-autocomplete/src/autocomplete.css">
-    <link rel="stylesheet" href="/components/angular-ui-bootstrap-datetimepicker/datetimepicker.css">
-
-    <script src="/components/jquery/dist/jquery.min.js"></script>
-    <script src="/components/angular/angular.min.js"></script>
-    <script src="/components/angular-i18n/angular-locale_es.js" type="text/javascript"></script>
-    <script src="/components/angular-ui-router/release/angular-ui-router.min.js"></script>
-    <script src="/components/angular-bootstrap/ui-bootstrap.min.js"></script>
-    <script src="/components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
-    <script src="/components/angular-ui-bootstrap-datetimepicker/datetimepicker.js"></script>
+    <!-- bower:js-->
+    <script src="/bower_components/jquery/dist/jquery.js"></script>
+    <script src="/bower_components/angular/angular.js"></script>
+    <script src="/bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
+    <script src="/bower_components/angular-ui-router/release/angular-ui-router.js"></script>
+    <script src="/bower_components/moment/moment.js"></script>
+    <script src="/bower_components/angular-moment/angular-moment.js"></script>
+    <script src="/bower_components/angular-ui-bootstrap-datetimepicker/datetimepicker.js"></script>
+    <script src="/bower_components/angular-google-places-autocomplete/src/autocomplete.js"></script>
+    <!-- endbower-->
 
     <script src="https://maps.googleapis.com/maps/api/js?libraries=places"></script>
-    <script src="/components/angular-google-places-autocomplete/src/autocomplete.js"></script>
+    <script src="/bower_components/angular-i18n/angular-locale_es.js" type="text/javascript"></script>
+    <script src="/javascripts/app.js"></script>
 
+    <!--<script src="/components/angular-bootstrap/ui-bootstrap.min.js"></script>-->
+    <!--<script src="/components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>-->
 
-    <script src="/javascripts/config-run.js"></script>
-    <script src="/javascripts/controllers.js"></script>
-    <script src="/javascripts/directives.js"></script>
-    <script src="/javascripts/factories.js"></script>
-    <script src="/javascripts/angularApp.js"></script>
-
-    
 </head>
 <body ng-app="vacacionesPermanentes">
 
