--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -4,8 +4,8 @@
 
 html, body {
   padding-top: 25px;
-//  height: 100%;
-//  overflow: hidden;
+  //  height: 100%;
+  //  overflow: hidden;
 }
 
 .row {
@@ -45,4 +45,8 @@ span.error {
 
 .underline {
   text-decoration: underline;
+}
+
+.angular-google-map-container {
+  height: 400px;
 }
