--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,6 +12,8 @@
 
     <link href="/stylesheets/style.min.css" rel="stylesheet">
 
+    <script src="https://maps.googleapis.com/maps/api/js?libraries=places&sensor=false"></script>
+
     <!-- bower:js-->
     <script src="/bower_components/jquery/dist/jquery.js"></script>
     <script src="/bower_components/angular/angular.js"></script>
@@ -21,9 +23,10 @@
     <script src="/bower_components/angular-moment/angular-moment.js"></script>
     <script src="/bower_components/angular-ui-bootstrap-datetimepicker/datetimepicker.js"></script>
     <script src="/bower_components/angular-google-places-autocomplete/src/autocomplete.js"></script>
+    <script src="/bower_components/lodash/lodash.js"></script>
+    <script src="/bower_components/angular-google-maps/dist/angular-google-maps.js"></script>
     <!-- endbower-->
 
-    <script src="https://maps.googleapis.com/maps/api/js?libraries=places"></script>
     <script src="/bower_components/angular-i18n/angular-locale_es.js" type="text/javascript"></script>
     <script src="/javascripts/app.js"></script>
 
