agregando calendar en el detalle

--- a/public/templates/viajes/detalle.html
+++ b/public/templates/viajes/detalle.html
@@ -1,6 +1,9 @@
 <div class="page-header">
     <h1>
         <small>Detalle:</small>
+        <button ui-sref="viajes.calendar({ id: viaje._id })" class="btn btn-warning btn-sm btn-f-r">
+            Ver Calendario
+        </button>
     </h1>
 </div>
 
