--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,6 +8,7 @@
     <!-- bower:css-->
     <link rel="stylesheet" href="/bower_components/angular-ui-bootstrap-datetimepicker/datetimepicker.css" />
     <link rel="stylesheet" href="/bower_components/angular-google-places-autocomplete/src/autocomplete.css" />
+    <link rel="stylesheet" href="/bower_components/fullcalendar/dist/fullcalendar.css" />
     <!-- endbower-->
 
     <link href="/stylesheets/style.min.css" rel="stylesheet">
@@ -25,6 +26,8 @@
     <script src="/bower_components/angular-google-places-autocomplete/src/autocomplete.js"></script>
     <script src="/bower_components/lodash/lodash.js"></script>
     <script src="/bower_components/angular-google-maps/dist/angular-google-maps.js"></script>
+    <script src="/bower_components/fullcalendar/dist/fullcalendar.js"></script>
+    <script src="/bower_components/angular-ui-calendar/src/calendar.js"></script>
     <!-- endbower-->
 
     <script src="/bower_components/angular-i18n/angular-locale_es.js" type="text/javascript"></script>
