--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -1,6 +1,6 @@
-@import "bower_components/bootstrap/less/bootstrap.less";
+@import "public/lib/bootstrap/less/bootstrap.less";
 
-@icon-font-path: "/bower_components/bootstrap/fonts/";
+@icon-font-path: "/lib/bootstrap/fonts/";
 
 html, body {
   padding-top: 25px;
