--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,8 +6,8 @@
     <title>Vacaciones Permanentes</title>
 
     <!-- bower:css-->
-    <link rel="stylesheet" href="/bower_components/angular-ui-bootstrap-datetimepicker/datetimepicker.css" />
-    <link rel="stylesheet" href="/bower_components/angular-google-places-autocomplete/src/autocomplete.css" />
+    <link rel="stylesheet" href="/lib/angular-ui-bootstrap-datetimepicker/datetimepicker.css" />
+    <link rel="stylesheet" href="/lib/angular-google-places-autocomplete/src/autocomplete.css" />
     <!-- endbower-->
 
     <link href="/stylesheets/style.min.css" rel="stylesheet">
@@ -15,23 +15,20 @@
     <script src="https://maps.googleapis.com/maps/api/js?libraries=places&sensor=false"></script>
 
     <!-- bower:js-->
-    <script src="/bower_components/jquery/dist/jquery.js"></script>
-    <script src="/bower_components/angular/angular.js"></script>
-    <script src="/bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
-    <script src="/bower_components/angular-ui-router/release/angular-ui-router.js"></script>
-    <script src="/bower_components/moment/moment.js"></script>
-    <script src="/bower_components/angular-moment/angular-moment.js"></script>
-    <script src="/bower_components/angular-ui-bootstrap-datetimepicker/datetimepicker.js"></script>
-    <script src="/bower_components/angular-google-places-autocomplete/src/autocomplete.js"></script>
-    <script src="/bower_components/lodash/lodash.js"></script>
-    <script src="/bower_components/angular-google-maps/dist/angular-google-maps.js"></script>
+    <script src="/lib/jquery/dist/jquery.js"></script>
+    <script src="/lib/angular/angular.js"></script>
+    <script src="/lib/angular-bootstrap/ui-bootstrap-tpls.js"></script>
+    <script src="/lib/angular-ui-router/release/angular-ui-router.js"></script>
+    <script src="/lib/moment/moment.js"></script>
+    <script src="/lib/angular-moment/angular-moment.js"></script>
+    <script src="/lib/angular-ui-bootstrap-datetimepicker/datetimepicker.js"></script>
+    <script src="/lib/angular-google-places-autocomplete/src/autocomplete.js"></script>
+    <script src="/lib/lodash/lodash.js"></script>
+    <script src="/lib/angular-google-maps/dist/angular-google-maps.js"></script>
     <!-- endbower-->
 
-    <script src="/bower_components/angular-i18n/angular-locale_es.js" type="text/javascript"></script>
+    <script src="/lib/angular-i18n/angular-locale_es.js" type="text/javascript"></script>
     <script src="/javascripts/app.js"></script>
-
-    <!--<script src="/components/angular-bootstrap/ui-bootstrap.min.js"></script>-->
-    <!--<script src="/components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>-->
 
 </head>
 <body ng-app="vacacionesPermanentes">
